prank on Yisroel

--- a/index.html
+++ b/index.html
@@ -7,8 +7,29 @@
     <title>Cowboy and Leather Goods</title>
 </head>
 <body>
-    <p>Here, Yisroel is your website</p>
-    <h3>Now you MUST make me a bracelet!</h3>
-    <h1>HA HA HA HA</h1>
+    <p>Hello Yisroels friends, this is Yisroels fancy website!</p>
+    <p>Yisroel is a cowboy and he sells leather goods.</p>
+    <p>Yisroel is a cowboy and he sells leather goods.</p>
+    <p>Yisroel is a cowboy and he sells leather goods.</p>
+    <p>Yisroel is a cowboy and he sells leather goods.</p>
+    <p>Yisroel is a cowboy and he sells leather goods.</p>
+    <p>Yisroel is a cowboy and he sells leather goods.</p>
+    <p>Yisroel is a cowboy and he sells leather goods.</p>
+    <p>Yisroel is a cowboy and he sells leather goods.</p>
+    <p>Yisroel is a cowboy and he sells leather goods.</p>
+    <p>Yisroel is a cowboy and he sells leather goods.</p>
+    <p>Yisroel is a cowboy and he sells leather goods.</p>
+    <p>Yisroel is a cowboy and he sells leather goods.</p>
+    <p>Yisroel is a cowboy and he sells leather goods.</p>
+
+    <p>Yisroel is a cowboy and he sells leather goods.</p>
+    <p>Yisroel is a cowboy and he sells leather goods.</p>
+    <p>Yisroel is a cowboy and he sells leather goods.</p>
+
+    <p>Yisroel is a cowboy and he sells leather goods.</p>
+    <p>Yisroel is a cowboy and he sells leather goods.</p>
+
+    <p>Yisroel is a cowboy and he sells leather goods.</p>
+    <p>Yisroel is a cowboy and he sells leather goods.</p>
 </body>
 </html>
