--- a/index.html
+++ b/index.html
@@ -7,29 +7,51 @@
     <title>Cowboy and Leather Goods</title>
 </head>
 <body>
-    <p>Hello Yisroels friends, this is Yisroels fancy website!</p>
-    <p>Yisroel is a cowboy and he sells leather goods.</p>
-    <p>Yisroel is a cowboy and he sells leather goods.</p>
-    <p>Yisroel is a cowboy and he sells leather goods.</p>
-    <p>Yisroel is a cowboy and he sells leather goods.</p>
-    <p>Yisroel is a cowboy and he sells leather goods.</p>
-    <p>Yisroel is a cowboy and he sells leather goods.</p>
-    <p>Yisroel is a cowboy and he sells leather goods.</p>
-    <p>Yisroel is a cowboy and he sells leather goods.</p>
-    <p>Yisroel is a cowboy and he sells leather goods.</p>
-    <p>Yisroel is a cowboy and he sells leather goods.</p>
-    <p>Yisroel is a cowboy and he sells leather goods.</p>
-    <p>Yisroel is a cowboy and he sells leather goods.</p>
-    <p>Yisroel is a cowboy and he sells leather goods.</p>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="products.html">Products</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section class="presentation">
+            <div class="introduction">
+                <h1>Cowboy and Leather
+                    Goods</h1>
+                <p>Handmade leather goods for cowboys and cowgirls</p>
+                <a href="products.html" class="cta">View Products</a>
+            </div>
+            <div class="cover">
+                <img src="images/cover.jpg" alt="Cowboy and Leather Goods">
+            </div>
+        </section>
+        <section class="services">
+            <h2>Our Services</h2>
+            <div class="service">
+                <img src="images/leather.jpg" alt="Leather Goods">
+                <h3>Leather Goods</h3>
+                <p>Handmade leather goods for cowboys and cowgirls</p>
+            </div>
+            <div class="service">
+                <img src="images/repair.jpg" alt="Repair">
+                <h3>Repair</h3>
+                <p>Repair services for your leather goods</p>
+            </div>
+            <div class="service">
+                <img src="images/custom.jpg" alt="Custom">
+                <h3>Custom</h3>
+                <p>Custom leather goods made to order</p>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2020 Cowboy and Leather Goods</p>
+    </footer>
+    
+   
 
-    <p>Yisroel is a cowboy and he sells leather goods.</p>
-    <p>Yisroel is a cowboy and he sells leather goods.</p>
-    <p>Yisroel is a cowboy and he sells leather goods.</p>
-
-    <p>Yisroel is a cowboy and he sells leather goods.</p>
-    <p>Yisroel is a cowboy and he sells leather goods.</p>
-
-    <p>Yisroel is a cowboy and he sells leather goods.</p>
-    <p>Yisroel is a cowboy and he sells leather goods.</p>
 </body>
 </html>
